fix: Adjust positioning of PokemonCard image for better alignment

--- a/src/app/features/pokemon/components/PokemonCard/PokemonCard.css
+++ b/src/app/features/pokemon/components/PokemonCard/PokemonCard.css
@@ -38,7 +38,7 @@
 
   .pokemon-card-image {
     top: -60px;
-    left: calc(50% - 30px);
+    left: calc(50% - 60px);
     width: 120px;
     height: 120px;
   }
